update - improved copy

--- a/_layouts/home.html
+++ b/_layouts/home.html
@@ -10,11 +10,11 @@ layout: default
       <div class="hero-text">
         <div class="hero-intro">
             <h1 class="hero-title">Creative Technologist</h1>
-            <p class="hero-subtitle">Building technical solutions and visuals with emerging technology</p>
+            <p class="hero-subtitle">Building technical solutions and engaging visuals with emerging technology</p>
           </div>
           
           <div class="hero-description">
-            <p>Joost Helfers is a Creative Technologist working at the intersection of 3D, AI, and emerging technology. His work is driven by a spatial approach, creating high-impact visuals and advanced technical workflows that help brands and designers communicate complex ideas. <br>
+            <p>Joost Helfers is a Creative Technologist working at the intersection of 3D, AI and emerging technology. His work is driven by a spatial approach, creating high-impact visuals and advanced technical workflows that help brands and designers communicate complex ideas. <br>
               Combining his architectural and advanced 3D design background with startup experience, he builds innovative solutions that work.</p>
         </div>
         
@@ -93,7 +93,7 @@ layout: default
           </div>
           <div class="service-content">
             <h3>High-Impact Brand & Media Assets</h3>
-            <p>Creating bespoke, high-fidelity visuals to articulate brand mood, showcase products, and communicate complex concepts. With a background in Architecture, the images and videos are always based on clarity , scale, and technical precision, from detailed renderings to engaging social media content.</p>
+            <p>I create cinematic, high-fidelity visuals that translate abstract ideas and complicated topics into clear, engaging imagery. With roots in architecture and 3D design, my imagery balances precision, clarity and emotions.</p>
             <div class="service-tags">
               <span class="tag">3D Visualization</span>
               <span class="tag">Renderings</span>
@@ -112,7 +112,7 @@ layout: default
           </div>
           <div class="service-content">
             <h3>Custom Automation Pipelines</h3>
-            <p>I design and implement custom, scalable workflows that automate content creation. Utilizing Generative AI (ComfyUI) and procedural systems, we enable you to rapidly generate thousands of visual assets at scale, streamlining R&D, design iteration, and marketing output with unparalleled speed.</p>
+            <p>I build custom, scalable pipelines that automate or enhance design and content creation, enabling productive outcomes and faster turnaround times. These workflows enable rapid iteration, customization and push the boundaries on what's possible with technology.</p>
             <div class="service-tags">
               <span class="tag">ComfyUI</span>
               <span class="tag">Generative Workflows</span>
@@ -132,7 +132,7 @@ layout: default
           </div>
           <div class="service-content">
             <h3>Real-Time & Digital Twin Platforms</h3>
-            <p>We develop functional, interactive platforms that connect real-time data with spatial 3D environments. This includes Digital Twins, interactive web-based configurators, and custom applications focused on data visualization and gaining actionable insights for engineering and sales.</p>
+            <p>I design functional environments, where data and space converge. From digital twins to interactive configurators, these platforms transform complex systems into intuitive experiences for engineering, sales and storytelling.</p>
             <div class="service-tags">
               <span class="tag">Digital Twin Development</span>
               <span class="tag">Unreal Engine</span>
@@ -147,7 +147,7 @@ layout: default
         <div class="service-card">
           <div class="service-content">
             <h3>The bespoke Way</h3>
-            <p>If you don't find yourself represented in our existing services, we invite you to collaborate with us in crafting a tailored solution that meets your unique needs.</p>
+            <p>Just as I feel like I don't fit in a box, sometimes ideas can be really unconventional as well. If you think you have an exciting idea and need someone to fuse design, technology and imagination: Let's find a solution together.</p>
             <div class="service-cta">
               <a href="mailto:mail@joosthelfers.com" class="cta-button service-cta-button">
                 <span class="cta-text">Let's Connect 📧</span>
